<resources>
    <string name="app_name">PADC-X-RecyclerView-YPST</string>
    <string name="tool_bar_title_news_list">News List</string>

    <string name="txt_sample_headline">ရွေးကောက်ပွဲတွင် ၅၀ ရာခိုင်နှုန်းအထိ အနိုင်ရရှိရန်မျှော်မှန်းဟု သူရဦးရွှေမန်းပြော</string>
    <string name="txt_sample_published_date">8 hours ago</string>
    <string name="txt_sample_publisher_name">TheVoiceMyanmar</string>
    <string name="btn_like">Like</string>
    <string name="like_button_support_iv">like Button</string>
    <string name="iv_headline_image">HeadLine Image</string>
    <string name="sample_news_content">ရ၂၀၂၀ ရွေးကောက်ပွဲတွင် ၄၀ ရာခိုင်နှုန်းမှ ၅၀ ရာခိုင်နှုန်းအထိ အနိုင်ရရှိရန်မျှော်မှန်းထားကြောင်း ပြည်ထောင်စု ကောင်းကျိုးဆောင်ပါတီခေါင်းဆောင် သူရဦးရွှေမန်းက ပြောကြားသည်။ လက်ရှိမှာတော့ ပါတီဝင်အင်အားတိုးပွားရေးနဲ့ အောင်နိုင်ရေးကိစ္စတွေကို ကြိုးပမ်းဆောင်ရွက်နေတယ်။ပါတီအရည် အသွေးကောင်းအောင် တည်ဆောက်နေတယ်။အဓိကအားဖြင့်တော့ အခြေခံကျတဲ့ ရပ်/ကျေးကော်မတီ၊ မြို့နယ်ကော်မတီတွေ အရည်အသွေးကောင်းမွန်အောင် တည်ဆောက်နေပါတယ် ဟု ၎င်းကဆိုသည်။ ယနေ့အချိန်အထိ မြို့နယ်ရုံးခွဲပေါင်း ၂၄၀ ကျော်ဖွင့်လှစ်ထားပြီး ၂၅၀ခန့်အထိ ဖွင့်လှစ်နိုင်ရန် မျှော်မှန်းထားကြောင်း၊ ကျေးရွာ/ရပ်ကွက်ရုံးများအနေနှင့် ၅၅၀ဝ ကျော်ဖွင့်လှစ်ထားပြီးဖြစ်ကာ ပါတီဝင်အင်အား ငါးသိန်းကျော်ရှိကြောင်း ပြည်ထောင်စုကောင်းကျိုးဆောင်ပါတီ ထံမှသိရသည်။ ပါတီအနေနှင့် ဥပဒေပြုရေးမဏ္ဍိုင်၊ အုပ်ချုပ်ရေးမဏ္ဍိုင်၊ တရားစီရင်ရေးမဏ္ဍိုင်များ ခိုင်မာတောင့်တင်းရေးအတွက် ပြင်ဆင်ဆောင်ရွက်နေပြီး သက်ဆိုင်ရာအစိုးရအဖွဲ့အစည်းများ၏ တာဝန်ကျေပွန်မှု၊ တာဝန်ခံနိုင်မှုများအတွက် အလေးထား ဆောင်ရွက်နေကြောင်း၊ သတင်းမီဒီယာများ၏ ပါဝင်မှုနှင့် ပွင့်လင်းမြင်သာမှုအပေါ် တာဝန်ခံဆောင်ရွက်သွားရန်ရှိကြောင်း သူရဦးရွှေမန်းက ပြောကြားသည်။ ပြည်ထောင်စုကောင်းကျိုးဆောင်ပါတီခေါင်းဆောင် သူရဦးရွှေမန်းသည် တပ်မတော်အစိုးရလက်ထက်တွင် ဗိုလ်ချုပ်ကြီးအဆင့်အထိ တာဝန်ထမ်းဆောင်ခဲ့သူဖြစ်ပြီး ၂၀၁၀ ပြည့်နှစ် ရွေးကောက်ပွဲတွင် ပြည်ထောင်စုကြံ့ခိုင်ရေးနှင့် ဖွံ့ဖြိုးရေးပါတီ ကိုယ်စားပြု ဇေယျာသီရိမြို့နယ်မဲဆန္ဒနယ်မှ ဝင်ရောက်ယှဉ်ပြိုင်အောင်နိုင်ခဲ့ရာ ပြည်သူ့လွှတ်တော်ဥက္ကဋ္ဌ၊ ပြည်ထောင်စုလွှတ်တော်နာယက အဖြစ် တာဝန်ယူခဲ့သည်။ ၂၀၁၅ ခုနှစ် အထွေထွေရွေးကောက်ပွဲတွင် ဖြူးမြို့နယ်မှ ဝင်ရောက်ယှဉ်ပြိုင်ခဲ့ရာ ရှုံးနိမ့်ခဲ့ပြီး NLD အစိုးရလက်ထက်တွင် ပြည်ထောင်စုလွှတ်တော်၊ ဥပဒေရေးရာ နှင့် အထူးကိစ္စရပ်များလေ့လာဆန်းစစ် သုံးသပ်ရေးကော်မရှင်တွင် ဥက္ကဋ္ဌအဖြစ် ၂၀၁၉ ခုနှစ် ဖေဖော်ဝါရီလ ၂၈ ရက်နေ့ အထိ တာဝန်ထမ်းဆောင်ခဲ့သည်။</string>
    <string name="em_no_news">News are not available for now</string>

</resources>
