<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:padding="@dimen/margin_medium"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_small">

            <ImageView
                android:id="@+id/ivNewsImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/iv_headline_image"
                android:scaleType="centerCrop"
                android:src="@drawable/news_sample" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvPublication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/txt_sample_publisher_name"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNewsHeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:maxLines="3"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/txt_sample_headline"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/txt_sample_published_date"
            android:textSize="@dimen/text_smaller" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/margin_medium"
                android:contentDescription="@string/like_button_support_iv"
                android:src="@drawable/ic_favorite_border_black_24dp" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/margin_xxlarge"
                android:text="@string/btn_like"
                android:textAllCaps="false" />
        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>