<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">


        <LinearLayout
            android:id="@+id/llNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvNewsHeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:maxLines="3"
                android:text="@string/txt_sample_headline"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPublishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/txt_sample_published_date"
                android:textSize="@dimen/text_smaller" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/ivNewsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/news_sample" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:contentDescription="@string/like_button_support_iv"
                android:src="@drawable/ic_favorite_border_black_24dp" />
        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>